--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Criando um microserviço com nodejs",
   "main": "./dist/index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc -p .",
     "start": "node ./",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +12,12 @@
   "author": "Lohan Amendola",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
