--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "pg": "^8.8.0"
